# oyot

./: .gitignore  BLOG_POST.md  LICENSE  Makefile  PLAN_REIMPLEMENT_ARCHITECTURE_WITH_YJS.md  README.md  docker-compose.yml  package-lock.json  package.json  run-dev.sh  shell.nix  start-signaling.sh  vite.config.js
.github/workflows/: release.yml
signaling-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
signaling-server/src/: index.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachment_manager.rs  crdt.rs  db.rs  db_snapshot.rs  identity.rs  indexer.rs  lib.rs  main.rs  pairing.rs  sync_manager.rs
src-tauri/src/commands/: attachments.rs  config.rs  documents.rs  images.rs  mod.rs  mqtt.rs  pairing.rs  sync.rs
src-tauri/src/network/: gossip_broadcaster.rs  mod.rs  mqtt_client.rs  peer_connection.rs  peer_manager.rs  signaling_client.rs  signaling_manager.rs  sync_protocol.rs  webrtc_manager.rs
src/lib/: types.ts
src/lib/collab/: LoroEditorExtension.ts  loroApp.ts  tiptapBinding.ts
src/lib/components/: Editor.svelte  Index.svelte  Journals.svelte  Reader.svelte  Sidebar.svelte  SlashSuggestionPopup.svelte  SyncStatus.svelte  ToastContainer.svelte
src/lib/editor/: Editor.svelte  EditorHeader.svelte  EditorInstance.svelte  EditorSaveService.ts  Toolbar.svelte  index.ts
src/lib/loro/: LoroEditorExtension.ts  lazyLoader.ts  loroApp.ts  tiptapBinding.ts
src/lib/services/: index.ts  (+5 more)
src/routes/: +layout.svelte  +page.svelte
(+29 files in other folders)
